--- a/paper.tex
+++ b/paper.tex
@@ -175,11 +175,15 @@
 \newcommand{\IsometryGroup}{\mathrm{Isom}}
 \newcommand{\lieAlgebra}{\mathfrak{g}}
 
-\hypersetup{pdfauthor={Elad Zelingher},
+\hypersetup{pdfauthor={Calvin Yost-Wolff, Elad Zelingher},
 	pdfsubject={Number theory, Representation theory},
 	pdfkeywords={Kloosterman sums, Gauss sums}}
 
-\title{On exponential sums arising from the doubling method}
+\title{On exponential sums arising from the classical doubling method}
+
+\author{Calvin Yost-Wolff}
+\address{Department of Mathematics, University of Michigan, 3084 East Hall, 530 Church Street, Ann Arbor, MI 48109-1043 USA}
+\email{calvinyw@umich.edu}
 
 \author{Elad Zelingher}
 \address{Department of Mathematics, University of Michigan, 1844 East Hall, 530 Church Street, Ann Arbor, MI 48109-1043 USA}
