--- a/paper.tex
+++ b/paper.tex
@@ -358,9 +358,7 @@ Write $P = L \ltimes N$, where $L$ is the Levi part of $P$ and $N$ is the unipot
 \subsubsection{Gamma factors}
 In order to make the computations more tolerable, it is beneficial to work with fully multiplicative functions. We introduce the doubling method gamma factors.
 
-Let $\chi \colon \multiplicativegroup{\finiteField} \to \multiplicativegroup{\cComplex}$ be a character.
-
-For an irreducible representation  $\tau$ of $\GL_k\left(\finiteField\right)$, define $$\dblGammaFactor{\tau}{\chi}{\fieldCharacter} = \centralCharacter{\tau}\left(-1\right) \GaussSumScalar{\tau \times \chi^{-1}}{\fieldCharacter} \GaussSumScalar{\Contragradient{\tau} \times \chi^{-1}}{\fieldCharacter}.$$
+Let $\chi \colon \multiplicativegroup{\finiteField} \to \multiplicativegroup{\cComplex}$ be a character. For an irreducible representation  $\tau$ of $\GL_k\left(\finiteField\right)$, define $$\dblGammaFactor{\tau}{\chi}{\fieldCharacter} = \centralCharacter{\tau}\left(-1\right) \GaussSumScalar{\tau \times \chi^{-1}}{\fieldCharacter} \GaussSumScalar{\Contragradient{\tau} \times \chi^{-1}}{\fieldCharacter}.$$
 For an irreducible representation $\pi$ of $G$, define the \emph{doubling method gamma factor} $$\dblGammaFactorSpace{\hermitianSpace}{\pi}{\chi}{\fieldCharacter} = \frac{\dblGaussSumScalar{\pi}{\chi}}{\GaussSumScalar{\chi^2}{\fieldCharacter}^{\left[\frac{\dim \hermitianSpace}{2}\right]}}.$$
 Using this notation and using the multiplicativity property of Kondo's Gauss sum and \Cref{thm:multiplicativity-in-terms-of-gauss-sums}, we have the following multiplicativity property.
 
