--- a/paper.tex
+++ b/paper.tex
@@ -309,7 +309,7 @@ where $\hermitianSpace' \subset \hermitianSpace$ is a non-degenerate subspace, o
 Write $P = L \ltimes N$, where $L$ is the Levi part of $P$ and $N$ is the unipotent radical of $P$. Then $L$ is isomorphic to $G' \times \GL_k\left(\finiteField\right)$, where $G' = \IsometryGroup\left(\hermitianSpace'\right)$.
 
 \begin{theorem}\label{thm:multiplicativity-in-terms-of-gauss-sums}
-	Let $\pi'$ be an irreducible representation of $G'$ and let $\tau$ be an irreducible representation of $\GL_k\left(\finiteField\right)$. Then for any irreducible representation $\pi$ of $G$ which appears as a subrepresentation the parabolic induction $\rho = \Ind{P}{G}{\tau \overline{\otimes} \pi'}$ and any $\chi \ne 1$, we have
+	Let $\pi'$ be an irreducible representation of $G'$ and let $\tau$ be an irreducible representation of $\GL_k\left(\finiteField\right)$. Then for any irreducible representation $\pi$ of $G$ which appears as a subrepresentation the parabolic induction $\rho = \Ind{P}{G}{\tau \overline{\otimes} \pi'}$ and any $\chi$ such that $\chi^2 \ne 1$, we have
 	$$\dblGaussSumScalar{\pi}{\chi} = \centralCharacter{\tau}\left(-1\right) \GaussSumScalar{\chi^2}{\fieldCharacter}^k \GaussSumScalar{\tau \times \chi^{-1}}{\fieldCharacter} \GaussSumScalar{\Contragradient{\tau} \times \chi^{-1}}{\fieldCharacter} \dblGaussSumScalar{\pi'}{\chi}.$$
 \end{theorem}
 \begin{proof}
@@ -371,7 +371,47 @@ Using this notation and using the multiplicativity property of Kondo's Gauss sum
 	\end{enumerate}
 \end{theorem}
 
+\subsubsection{Basic torus computation}
+In this section we compute the doubling method Gauss sum for a torus of the form $\finiteFieldExtension{2m}^1$.
+
+If $\alpha \colon \multiplicativegroup{\finiteFieldExtension{n}} \to \multiplicativegroup{\cComplex}$ is a character, denote $$\tau\left(\alpha, \fieldCharacter_n\right) = -q^{-\frac{n}{2}}\sum_{x \in \multiplicativegroup{\finiteFieldExtension{n}}} \alpha\left(x\right) \fieldCharacter_n\left(x\right),$$
+where $\fieldCharacter_n \colon \finiteFieldExtension{n} \to \multiplicativegroup{\cComplex}$ is given by $\fieldCharacter_n = \fieldCharacter \circ \trace_{\finiteFieldExtension{n} : \finiteField}$.
+
+Let $\theta \colon \finiteFieldExtension{2m}^1 \to \multiplicativegroup{\cComplex}$ and let $\chi \colon \multiplicativegroup{\finiteField} \to \multiplicativegroup{\cComplex}$ be non-trivial characters. Our goal is to compute $$\sum_{\substack{x \in \finiteFieldExtension{2m}^1\\
+		x \ne 1}} \theta \left(x\right) \chi\left(\FieldNorm{2m}{1}\left(x - 1\right)\right).$$
+
+As usual, we rewrite this sum as follows
+$$q^{-2m} \sum_{z \in \finiteFieldExtension{2m}} \sum_{y \in \multiplicativegroup{\finiteFieldExtension{2m}}} \sum_{x \in \finiteFieldExtension{2m}^1} \theta \left(x\right) \chi\left(\FieldNorm{2m}{1}\left(y\right)\right) \fieldCharacter_{2m}\left(z\left(y-x+1\right)\right).$$
+If $z=0$ then the sum over $y$ will vanish. Hence we can reduce the sum to $z \in \multiplicativegroup{\finiteFieldExtension{2m}}$. Replacing $y$ with $z^{-1} y$ we get the sum
+$$-q^{-m} \tau\left(\chi \circ \FieldNorm{2m}{1}, \fieldCharacter_{2m}\right) \sum_{z \in \multiplicativegroup{\finiteFieldExtension{2m}}} \chi^{-1}\left(\FieldNorm{2m}{1}\left(z\right)\right) \fieldCharacter_{2m}\left(z\right)  \sum_{x \in \finiteFieldExtension{2m}^1} \theta \left(-x\right) \fieldCharacter_{2m}\left(xz\right).$$
+To proceed, we use the Hilbert 90 map $\multiplicativegroup{\finiteFieldExtension{2m}} \to \finiteFieldExtension{2m}^1$ given by $t \mapsto t^{1 - q^m}$. This map is surjective, and its kernel is $\multiplicativegroup{\finiteFieldExtension{m}}$. Denote $\beta \colon \multiplicativegroup{\finiteFieldExtension{2m}} \to \multiplicativegroup{\cComplex}$ by $\beta\left(t\right) = \theta\left(t^{1-q^m}\right)$. Replacing the sum over $x \in \finiteFieldExtension{2m}^1$ with a sum over $t \in \multiplicativegroup{\finiteFieldExtension{2m}}$, we get \begin{align*}
+	& \sum_{z \in \multiplicativegroup{\finiteFieldExtension{2m}}} \chi^{-1}\left(\FieldNorm{2m}{1}\left(z\right)\right) \fieldCharacter_{2m}\left(z\right) \sum_{x \in \finiteFieldExtension{2m}^1} \theta \left(x\right) \fieldCharacter_{2m}\left(xz\right) \\
+	= & \frac{1}{q^m-1}\sum_{z \in \multiplicativegroup{\finiteFieldExtension{2m}}} \sum_{t \in \multiplicativegroup{\finiteFieldExtension{2m}}} \chi^{-1}\left(\FieldNorm{2m}{1}\left(z\right)\right) \fieldCharacter_{2m}\left(z^{q^m}\right) \beta \left(t\right) \fieldCharacter_{2m}\left(t^{1-q^m} z\right).
+\end{align*}
+Replacing $z$ with $t^{q^m} z$, this becomes
+\begin{align*}
+	\frac{1}{q^m-1}\sum_{t,z \in \multiplicativegroup{\finiteFieldExtension{2m}}} \chi^{-1}\left(\FieldNorm{2m}{1}\left(z\right)\right) \chi^{-1}\left(\FieldNorm{2m}{1}\left(t\right)\right) \beta \left(t\right) \fieldCharacter_{2m}\left(\trace_{\finiteFieldExtension{2m} \slash \finiteFieldExtension{m}}\left(z\right) t\right).
+\end{align*}
+Since $\chi \circ \FieldNorm{2m}{1} \ne \beta$, if $\trace_{\finiteFieldExtension{2m} \slash \finiteFieldExtension{m}}\left(z\right) = 0$, we have that the inner sum over $t$ is zero. Hence, we may replace the sum over $z$ such that $\trace_{\finiteFieldExtension{2m} \slash \finiteFieldExtension{m}}\left(z\right) \ne 0$. Using the fact that $\beta$ is trivial on $\multiplicativegroup{\finiteFieldExtension{m}}$, we have after replacing variables $t \mapsto \frac{t}{\trace_{\finiteFieldExtension{2m} \slash \finiteFieldExtension{m}}\left(z\right)}$,
+\begin{align*}
+	\frac{1}{q^m-1}\sum_{\substack{t,z \in \multiplicativegroup{\finiteFieldExtension{2m}}\\
+	\trace_{\finiteFieldExtension{2m} \slash \finiteFieldExtension{m}}\left(z\right) \ne 0}} \chi^{-1}\left(\FieldNorm{2m}{1}\left(\frac{z}{\trace_{\finiteFieldExtension{2m} \slash \finiteFieldExtension{m}}\left(z\right) }\right)\right) \chi^{-1}\left(\FieldNorm{2m}{1}\left(t\right)\right) \beta \left(t\right) \fieldCharacter_{2m}\left(t\right).
+\end{align*}
+By the appendix, this equals
+\begin{align*}
+	q^{\frac{m}{2}} \tau\left(\chi^{-1} \circ \FieldNorm{m}{1}, \fieldCharacter_m\right)^2 \tau\left(\chi^{2} \circ \FieldNorm{m}{1}, \fieldCharacter_m\right) \left(\sum_{t \in \multiplicativegroup{\finiteFieldExtension{2m}}} \chi^{-1}\left(\FieldNorm{2m}{1}\left(t\right)\right) \beta \left(t\right) \fieldCharacter_{2m}\left(t\right)\right).
+\end{align*}
+
+To summarize, we have
+$$\sum_{\substack{x \in \finiteFieldExtension{2m}^1\\
+		x \ne 1}} \theta \left(-x\right) \chi\left(\FieldNorm{2m}{1}\left(x - 1\right)\right) = q^{\frac{m}{2}} \tau\left(\chi^{-1}, \fieldCharacter\right)^{2m} \tau\left(\chi, \fieldCharacter\right)^{2m} \tau\left(\chi^{2}, \fieldCharacter_m\right)^m \tau\left(\beta \times \chi^{-1}, \fieldCharacter_{2m}\right),$$
+	where $\beta\left(t\right) = \theta\left(t^{1-q^m}\right)$.
+Since $\tau\left(\chi^{-1}, \fieldCharacter\right) = \chi\left(-1\right) \conjugate{\tau\left(\chi, \fieldCharacter\right)}$ and since $\chi \ne 1$, this implies the identity
+$$\sum_{\substack{x \in \finiteFieldExtension{2m}^1\\
+		x \ne 1}} \theta \left(x\right) \chi\left(\FieldNorm{2m}{1}\left(x - 1\right)\right) = \theta\left(-1\right) q^{\frac{m}{2}} \tau\left(\chi^{2}, \fieldCharacter_m\right)^m \tau\left(\beta \times \chi^{-1}, \fieldCharacter_{2m}\right).$$
+
 \subsubsection{Computation for irreducible cuspidal representations}
+
 
 \begin{theorem}
 	Suppose that $\pi$ is an irreducible cuspidal representation of $G$, parameterized by a character $\theta = \theta_1 \times \dots \times \theta_r$ of a torus $T$ such that $$T \cong \finiteFieldExtension{2n_1}^1 \times \finiteFieldExtension{2n_2}^1 \times \dots \times \finiteFieldExtension{2n_r}^1,$$
@@ -380,6 +420,17 @@ Using this notation and using the multiplicativity property of Kondo's Gauss sum
 	where $\theta'_j\left(x\right) = \theta_j\left(x^{1-q^{n_j}}\right)$ and $$\tau\left( \theta'_j \times \chi, \fieldCharacter_{2n_j}\right) = -q^{-n_j} \sum_{x \in \multiplicativegroup{\finiteFieldExtension{2n_j}}} \theta'_j\left(x\right) \chi\left(\FieldNorm{2n_j}{1}\left(x\right)\right)\fieldCharacter\left(\trace_{\finiteFieldExtension{2n_j} \slash \finiteField}\left(x\right)\right).$$
 \end{theorem}
 
+\appendix
+\section{Evaluation of an exponential sum}
+
+In this appendix, we evaluate the following exponential sum. Let $\chi \colon \multiplicativegroup{\finiteField} \to \multiplicativegroup{\cComplex}$ be a non-trivial character. We compute $$\sum_{\substack{x \in \multiplicativegroup{\finiteFieldExtension{2}}\\
+	\trace_{\finiteFieldExtension{2} \slash \finiteField}\left(x\right) \ne 0}} \chi\left(\FieldNorm{2}{1}\left(\frac{x}{\trace_{\finiteFieldExtension{2} \colon \finiteField} x}\right) \right).$$
+As usual, we rewrite this sum as
+$$\frac{1}{q} \sum_{z \in \finiteField} \sum_{y \in \multiplicativegroup{\finiteField}} \sum_{x \in \multiplicativegroup{\finiteFieldExtension{2}}} \chi\left(\FieldNorm{2}{1}\left(xy\right)\right) \fieldCharacter\left(z\left(y \trace_{\finiteFieldExtension{2} \slash \finiteField} x - 1\right)\right).$$
+It is clear that if $z = 0$, then the sum over $x$ will vanish. Hence, we may reduce the sum to a sum over $z \in \multiplicativegroup{\finiteField}$. By replacing $y$ with $z^{-1} y$ and then replacing $z$ with $-z$, we arrive at the sum
+$$\frac{1}{q} \sum_{y \in \multiplicativegroup{\finiteField}} \sum_{x \in \multiplicativegroup{\finiteFieldExtension{2}}} \chi\left(\FieldNorm{2}{1}\left(xy\right)\right) \fieldCharacter\left(y \trace_{\finiteFieldExtension{2} \slash \finiteField} x\right) \sum_{z \in \multiplicativegroup{\finiteField}} \chi^{-2}\left(z\right)\fieldCharacter\left(z\right).$$
+Replacing $x$ with $y^{-1}x$, and using the Hasse--Davenport relation, we arrive at the sum
+$$q^{\frac{1}{2}} \left(q-1\right) \tau\left(\chi, \fieldCharacter\right)^2 \tau\left(\chi^{-2}, \fieldCharacter\right).$$
 \bibliographystyle{abbrv}
 \bibliography{references}
 \end{document}
