--- a/paper.tex
+++ b/paper.tex
@@ -375,40 +375,41 @@ Using this notation and using the multiplicativity property of Kondo's Gauss sum
 In this section we compute the doubling method Gauss sum for a torus of the form $\finiteFieldExtension{2m}^1$.
 
 If $\alpha \colon \multiplicativegroup{\finiteFieldExtension{n}} \to \multiplicativegroup{\cComplex}$ is a character, denote $$\tau\left(\alpha, \fieldCharacter_n\right) = -q^{-\frac{n}{2}}\sum_{x \in \multiplicativegroup{\finiteFieldExtension{n}}} \alpha\left(x\right) \fieldCharacter_n\left(x\right),$$
-where $\fieldCharacter_n \colon \finiteFieldExtension{n} \to \multiplicativegroup{\cComplex}$ is given by $\fieldCharacter_n = \fieldCharacter \circ \trace_{\finiteFieldExtension{n} : \finiteField}$.
+where $\fieldCharacter_n \colon \finiteFieldExtension{n} \to \multiplicativegroup{\cComplex}$ is given by $\fieldCharacter_n = \fieldCharacter \circ \trace_{\finiteFieldExtension{n} : \finiteField}$. If $\chi \colon \multiplicativegroup{\finiteField} \to \multiplicativegroup{\cComplex}$ is a character and if $\alpha$ is as above, denote
+$$\tau\left(\alpha \times \chi, \fieldCharacter_n\right) = -q^{-\frac{n}{2}}\sum_{x \in \multiplicativegroup{\finiteFieldExtension{n}}} \alpha\left(x\right) \chi\left( \FieldNorm{n}{1}\left(x\right)\right) \fieldCharacter_n\left(x\right),$$
 
-Let $\theta \colon \finiteFieldExtension{2m}^1 \to \multiplicativegroup{\cComplex}$ and $\chi \colon \multiplicativegroup{\finiteField} \to \multiplicativegroup{\cComplex}$ be non-trivial characters, such that $\theta \ne \chi \circ \FieldNorm{2m}{1}$. Our goal is to compute $$\sum_{\substack{x \in \finiteFieldExtension{2m}^1\\
+Let $\theta \colon \finiteFieldExtension{2m}^1 \to \multiplicativegroup{\cComplex}$ and $\chi \colon \multiplicativegroup{\finiteField} \to \multiplicativegroup{\cComplex}$ be non-trivial characters, such that $\theta\left(x^{1-q^m}\right) \ne \chi \circ \FieldNorm{2m}{1}\left(x\right)$ for some $x \in \multiplicativegroup{\finiteFieldExtension{2m}}$. Our goal is to compute $$\sum_{\substack{x \in \finiteFieldExtension{2m}^1\\
 		x \ne 1}} \theta \left(x\right) \chi\left(\FieldNorm{2m}{1}\left(x - 1\right)\right).$$
 
 As usual, we rewrite this sum as follows
 $$q^{-2m} \sum_{z \in \finiteFieldExtension{2m}} \sum_{y \in \multiplicativegroup{\finiteFieldExtension{2m}}} \sum_{x \in \finiteFieldExtension{2m}^1} \theta \left(x\right) \chi\left(\FieldNorm{2m}{1}\left(y\right)\right) \fieldCharacter_{2m}\left(z\left(y-x+1\right)\right).$$
 If $z=0$ then the sum over $y$ will vanish. Hence we can reduce the sum to $z \in \multiplicativegroup{\finiteFieldExtension{2m}}$. Replacing $y$ with $z^{-1} y$ we get the sum
 $$-q^{-m} \tau\left(\chi \circ \FieldNorm{2m}{1}, \fieldCharacter_{2m}\right) \sum_{z \in \multiplicativegroup{\finiteFieldExtension{2m}}} \chi^{-1}\left(\FieldNorm{2m}{1}\left(z\right)\right) \fieldCharacter_{2m}\left(z\right)  \sum_{x \in \finiteFieldExtension{2m}^1} \theta \left(-x\right) \fieldCharacter_{2m}\left(xz\right).$$
-To proceed, we use the Hilbert 90 map $\multiplicativegroup{\finiteFieldExtension{2m}} \to \finiteFieldExtension{2m}^1$ given by $t \mapsto t^{1 - q^m}$. This map is surjective, and its kernel is $\multiplicativegroup{\finiteFieldExtension{m}}$. Denote $\beta \colon \multiplicativegroup{\finiteFieldExtension{2m}} \to \multiplicativegroup{\cComplex}$ by $\beta\left(t\right) = \theta\left(t^{1-q^m}\right)$. Replacing the sum over $x \in \finiteFieldExtension{2m}^1$ with a sum over $t \in \multiplicativegroup{\finiteFieldExtension{2m}}$, we get \begin{align*}
+To proceed, we use the Hilbert 90 map $\multiplicativegroup{\finiteFieldExtension{2m}} \to \finiteFieldExtension{2m}^1$ given by $t \mapsto t^{1 - q^m}$. This map is surjective, and its kernel is $\multiplicativegroup{\finiteFieldExtension{m}}$. Define $\theta' \colon \multiplicativegroup{\finiteFieldExtension{2m}} \to \multiplicativegroup{\cComplex}$ by $\theta'\left(t\right) = \theta\left(t^{1-q^m}\right)$. Replacing the sum over $x \in \finiteFieldExtension{2m}^1$ with a sum over $t \in \multiplicativegroup{\finiteFieldExtension{2m}}$, we get \begin{align*}
 	& \sum_{z \in \multiplicativegroup{\finiteFieldExtension{2m}}} \chi^{-1}\left(\FieldNorm{2m}{1}\left(z\right)\right) \fieldCharacter_{2m}\left(z\right) \sum_{x \in \finiteFieldExtension{2m}^1} \theta \left(x\right) \fieldCharacter_{2m}\left(xz\right) \\
-	= & \frac{1}{q^m-1}\sum_{z \in \multiplicativegroup{\finiteFieldExtension{2m}}} \sum_{t \in \multiplicativegroup{\finiteFieldExtension{2m}}} \chi^{-1}\left(\FieldNorm{2m}{1}\left(z\right)\right) \fieldCharacter_{2m}\left(z^{q^m}\right) \beta \left(t\right) \fieldCharacter_{2m}\left(t^{1-q^m} z\right).
+	= & \frac{1}{q^m-1}\sum_{z \in \multiplicativegroup{\finiteFieldExtension{2m}}} \sum_{t \in \multiplicativegroup{\finiteFieldExtension{2m}}} \chi^{-1}\left(\FieldNorm{2m}{1}\left(z\right)\right) \fieldCharacter_{2m}\left(z^{q^m}\right) \theta' \left(t\right) \fieldCharacter_{2m}\left(t^{1-q^m} z\right).
 \end{align*}
 Replacing $z$ with $t^{q^m} z$, this becomes
 \begin{align*}
-	\frac{1}{q^m-1}\sum_{t,z \in \multiplicativegroup{\finiteFieldExtension{2m}}} \chi^{-1}\left(\FieldNorm{2m}{1}\left(z\right)\right) \chi^{-1}\left(\FieldNorm{2m}{1}\left(t\right)\right) \beta \left(t\right) \fieldCharacter_{2m}\left(\trace_{\finiteFieldExtension{2m} \slash \finiteFieldExtension{m}}\left(z\right) t\right).
+	\frac{1}{q^m-1}\sum_{t,z \in \multiplicativegroup{\finiteFieldExtension{2m}}} \chi^{-1}\left(\FieldNorm{2m}{1}\left(z\right)\right) \chi^{-1}\left(\FieldNorm{2m}{1}\left(t\right)\right) \theta' \left(t\right) \fieldCharacter_{2m}\left(\trace_{\finiteFieldExtension{2m} \slash \finiteFieldExtension{m}}\left(z\right) t\right).
 \end{align*}
-Since $\chi \circ \FieldNorm{2m}{1} \ne \beta$, if $\trace_{\finiteFieldExtension{2m} \slash \finiteFieldExtension{m}}\left(z\right) = 0$, we have that the inner sum over $t$ is zero. Hence, we may replace the sum over $z$ such that $\trace_{\finiteFieldExtension{2m} \slash \finiteFieldExtension{m}}\left(z\right) \ne 0$. Using the fact that $\beta$ is trivial on $\multiplicativegroup{\finiteFieldExtension{m}}$, we have after replacing variables $t \mapsto \frac{t}{\trace_{\finiteFieldExtension{2m} \slash \finiteFieldExtension{m}}\left(z\right)}$,
+Since $\chi \circ \FieldNorm{2m}{1} \ne \theta'$, if $\trace_{\finiteFieldExtension{2m} \slash \finiteFieldExtension{m}}\left(z\right) = 0$, we have that the inner sum over $t$ is zero. Hence, we may replace the sum over $z$ such that $\trace_{\finiteFieldExtension{2m} \slash \finiteFieldExtension{m}}\left(z\right) \ne 0$. Using the fact that $\theta'$ is trivial on $\multiplicativegroup{\finiteFieldExtension{m}}$, we have after replacing variables $t \mapsto \frac{t}{\trace_{\finiteFieldExtension{2m} \slash \finiteFieldExtension{m}}\left(z\right)}$,
 \begin{align*}
 	\frac{1}{q^m-1}\sum_{\substack{t,z \in \multiplicativegroup{\finiteFieldExtension{2m}}\\
-	\trace_{\finiteFieldExtension{2m} \slash \finiteFieldExtension{m}}\left(z\right) \ne 0}} \chi^{-1}\left(\FieldNorm{2m}{1}\left(\frac{z}{\trace_{\finiteFieldExtension{2m} \slash \finiteFieldExtension{m}}\left(z\right) }\right)\right) \chi^{-1}\left(\FieldNorm{2m}{1}\left(t\right)\right) \beta \left(t\right) \fieldCharacter_{2m}\left(t\right).
+	\trace_{\finiteFieldExtension{2m} \slash \finiteFieldExtension{m}}\left(z\right) \ne 0}} \chi^{-1}\left(\FieldNorm{2m}{1}\left(\frac{z}{\trace_{\finiteFieldExtension{2m} \slash \finiteFieldExtension{m}}\left(z\right) }\right)\right) \chi^{-1}\left(\FieldNorm{2m}{1}\left(t\right)\right) \theta' \left(t\right) \fieldCharacter_{2m}\left(t\right).
 \end{align*}
 By the appendix, this equals
 \begin{align*}
-	q^{\frac{m}{2}} \tau\left(\chi^{-1} \circ \FieldNorm{m}{1}, \fieldCharacter_m\right)^2 \tau\left(\chi^{2} \circ \FieldNorm{m}{1}, \fieldCharacter_m\right) \left(\sum_{t \in \multiplicativegroup{\finiteFieldExtension{2m}}} \chi^{-1}\left(\FieldNorm{2m}{1}\left(t\right)\right) \beta \left(t\right) \fieldCharacter_{2m}\left(t\right)\right).
+	q^{\frac{m}{2}} \tau\left(\chi^{-1} \circ \FieldNorm{m}{1}, \fieldCharacter_m\right)^2 \tau\left(\chi^{2} \circ \FieldNorm{m}{1}, \fieldCharacter_m\right) \left(\sum_{t \in \multiplicativegroup{\finiteFieldExtension{2m}}} \chi^{-1}\left(\FieldNorm{2m}{1}\left(t\right)\right) \theta' \left(t\right) \fieldCharacter_{2m}\left(t\right)\right).
 \end{align*}
 
 To summarize, we have
 $$\sum_{\substack{x \in \finiteFieldExtension{2m}^1\\
-		x \ne 1}} \theta \left(-x\right) \chi\left(\FieldNorm{2m}{1}\left(x - 1\right)\right) = q^{\frac{m}{2}} \tau\left(\chi^{-1}, \fieldCharacter\right)^{2m} \tau\left(\chi, \fieldCharacter\right)^{2m} \tau\left(\chi^{2}, \fieldCharacter_m\right)^m \tau\left(\beta \times \chi^{-1}, \fieldCharacter_{2m}\right),$$
-	where $\beta\left(t\right) = \theta\left(t^{1-q^m}\right)$.
+		x \ne 1}} \theta \left(-x\right) \chi\left(\FieldNorm{2m}{1}\left(x - 1\right)\right) = q^{\frac{m}{2}} \tau\left(\chi^{-1}, \fieldCharacter\right)^{2m} \tau\left(\chi, \fieldCharacter\right)^{2m} \tau\left(\chi^{2}, \fieldCharacter_m\right)^m \tau\left(\theta' \times \chi^{-1}, \fieldCharacter_{2m}\right),$$
+	where $\theta'\left(t\right) = \theta\left(t^{1-q^m}\right)$.
 Since $\tau\left(\chi^{-1}, \fieldCharacter\right) = \chi\left(-1\right) \conjugate{\tau\left(\chi, \fieldCharacter\right)}$ and since $\chi \ne 1$, this implies the identity
 $$\sum_{\substack{x \in \finiteFieldExtension{2m}^1\\
-		x \ne 1}} \theta \left(x\right) \chi\left(\FieldNorm{2m}{1}\left(x - 1\right)\right) = \theta\left(-1\right) q^{\frac{m}{2}} \tau\left(\chi^{2}, \fieldCharacter_m\right)^m \tau\left(\beta \times \chi^{-1}, \fieldCharacter_{2m}\right).$$
+		x \ne 1}} \theta \left(x\right) \chi\left(\FieldNorm{2m}{1}\left(x - 1\right)\right) = \theta\left(-1\right) q^{\frac{m}{2}} \tau\left(\chi^{2}, \fieldCharacter_m\right)^m \tau\left(\theta' \times \chi^{-1}, \fieldCharacter_{2m}\right).$$
 
 \subsubsection{Computation for irreducible cuspidal representations}
 
